--- a/src/pages/HomePage/FavProjectsBox.css
+++ b/src/pages/HomePage/FavProjectsBox.css
@@ -56,9 +56,8 @@
 
 .fav-project-image {
     width: 100%; /* Force full width */
-    height: 100%; /* Maintain fixed height */
-    object-fit: contain; /* Prevent distortion */
-    object-position: center top;
+    height: 360px; /* Maintain fixed height */
+    object-fit: cover; /* This makes the image always cover the area but leads to shifting zoom */
 }
 
 .fav-project-content {
@@ -66,6 +65,8 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .fav-project-title {
@@ -90,7 +91,6 @@
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    flex-grow: 1;
     line-height: 1.4;
   
     /* Standard property for newer browsers */
